--- a/src/Components/ArticlesPage/Nft.css
+++ b/src/Components/ArticlesPage/Nft.css
@@ -24,7 +24,7 @@
     position: absolute;
 }
 .blog-p a {
-    color: #214355;
+    color: #1d4257;
     text-decoration: none;
     list-style: none;
 }
