--- a/src/Components/ArticlesPage/NFT/Nft.css
+++ b/src/Components/ArticlesPage/NFT/Nft.css
@@ -6,9 +6,11 @@
     margin: auto;
     background: #f5f5f5;
     box-shadow: 1px 10px 100px #00000008;
+    height: auto;
 }
 .Blog-content {
     width: 90%;
+    height: auto;
     margin: auto;
     margin-top: 50px;
     border-left: 1px solid #e4e4e4;
@@ -19,6 +21,7 @@
     position: relative;
     /* margin-top: 25px; */
     width: 100%;
+    height:auto;
 }
 .Blog-head-img {
     position: absolute;
