--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,17 +5,17 @@ font-family: 'Overpass', sans-serif;
 font-family: "Bebas Neue", sans-serif; */
 
 .footer {
+    bottom: 0;
     background: #252525;
     padding: 30px 0;
 }
-
 
 .footer-bar {
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #ffffff23;
-    /* -width: 800px; */
+    max-width: 800px;
     margin: auto;
     padding-bottom: 20px;
 }
@@ -23,12 +23,12 @@ font-family: "Bebas Neue", sans-serif; */
 .explore {
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 40%;
     margin-right: 100px;
 }
 
 .explore-links {
-    font-size: 20px;
+    font-size: 18px;
     color: #ffffff;
     font-family: 'Outfit', sans-serif;
     font-weight: 100;
@@ -39,7 +39,7 @@ font-family: "Bebas Neue", sans-serif; */
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 100px;
+    /* margin-right: 100px; */
 }
 
 .logos img {
