--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -21,7 +21,7 @@ body {
 
 .title {
     position: relative;
-    font-size: 60px;
+    font-size: 50px;
     color: #202020;
     font-family: 'outfit', sans-serif;
     font-weight: 400;
@@ -30,30 +30,17 @@ body {
     line-height: 70px;
 }
 .title-span {
-    color: #414199;
+    color: #303f60;
     font-weight: 700;
 }
+
 .CoverImage {
     width: 50%;
     height: auto;
 }
 .CoverImage img {
-    width:800px;
-    margin-top:30px;
-}
-
-.title1 {
-    position: relative;
-    font-size: 60px;
-    color: #444444;
-    font-family: 'Outfit', sans-serif;
-    text-transform: capitalize;
-    font-weight: 300;
-    text-align: end;
-    white-space: pre-line;
-    line-height: 70px;
-    padding-top: 30px;
-    margin-right: 80px;
+    width:500px;
+    margin:40px 30px 0 30px;
 }
 
 .box {
@@ -101,7 +88,7 @@ body {
 .css-button-rounded--black {
     min-width: 200px;
     height: 50px;
-    color: #fff;
+    color: #ffffff;
     padding: 5px 10px;
     font-weight: 500;
     cursor: pointer;
@@ -111,13 +98,14 @@ body {
     outline: none;
     font-family:'Outfit', sans-serif;
     text-transform: uppercase;
-    border: 2px solid #414199;
-    background: #414199;
+    border: 2px solid #3f4a61;
+    border-radius: 2px;
+    background: #3f4a61;
     margin-top: 20px;
     margin-left: 5px;
     letter-spacing: 1px;
   }
   .css-button-rounded--black:hover {
-    background: #f5f5f5;
-    color: #212529
+    background: none;
+    color: #3f4a61
   }
