--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -66,7 +66,7 @@ font-family: 'Overpass', sans-serif; */
   .navbar {
     background: #f4f4f4;
     position: fixed;
-    width: 100%;
+    /* width: 100%; */
     height: 60px;
     top: 0;
     display: flex;
@@ -84,7 +84,7 @@ font-family: 'Overpass', sans-serif; */
   .navbar-links {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
     position: absolute;
     top: 60px;
     opacity: 1;
