--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -42,6 +42,46 @@ body {
     width:500px;
     margin:40px 30px 0 30px;
 }
+@media (max-width:500px) {
+    
+    .home {
+        width: 100%;
+        margin: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+    .CoverText {
+        margin: 10px;
+    }
+    
+    .title {
+        position: relative;
+        font-size: 35px;
+        color: #202020;
+        font-family: 'outfit', sans-serif;
+        font-weight: 400;
+        text-align: start;
+        white-space: pre-line;
+        line-height: 45px;
+    }
+    .title-span {
+        color: #303f60;
+        font-weight: 700;
+    }
+    
+    .CoverImage {
+        width: 100%;
+        height: auto;
+    }
+    .CoverImage img {
+        width:250px;
+        margin-top:70px;
+        text-align: center;
+    }
+}
 
 .box {
     position: absolute;
