--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -84,7 +84,7 @@ font-family: 'Overpass', sans-serif; */
   .navbar-links {
     display: flex;
     flex-direction: column;
-    /* width: 100%; */
+    width: 100%;
     position: absolute;
     top: 60px;
     opacity: 1;
