--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,6 +8,7 @@ font-family: 'Overpass', sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* NAVIGATION */
@@ -67,7 +68,7 @@ font-family: 'Overpass', sans-serif; */
   .navbar {
     background: #f4f4f4;
     position: fixed;
-    /* width: 100%; */
+    width: 100vw;
     height: 60px;
     top: 0;
     display: flex;
