--- a/src/Components/Home/Evolution/Web.css
+++ b/src/Components/Home/Evolution/Web.css
@@ -16,44 +16,32 @@ font-family: 'Overpass', sans-serif;
     height: auto;
     margin-top: 80px;
 }
-.future {
-    position: relative;
-    font-size: 20px;
-    font-family: "Cinzel Decorative", cursive;
-    font-weight: 500;
-    color: #000000;
-    letter-spacing: 7px;
-    text-transform: lowercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 70px 0 60px 0; */
-}
-.future::after {
-    content: "";
-    position: absolute;
-    top: 30px;
-    width: 160px;
-    height: .5px;
-    border-radius: 10px;
-    background: #00000021;
-}
+
 
 .title-parent {
-    text-align: center;
-    max-width: 850px;
+    /* text-align: center; */
+    max-width: 910px;
     margin: auto;
 }
 
 .web-title {
     position: relative;
-    color: #3b3b3b;
-    font-size: 20px;
-    font-family: "Outfit", sans-serif;
-    letter-spacing: .5px;
-    font-weight: 400;
-    margin: 50px 0 80px 0;
-    line-height: 30px;
+    color: #393E46;
+    font-size: 25px;
+    margin: 50px 0 70px 0;
+    font-family: "Cinzel Decorative", cursive;
+    font-weight: 500;
+    letter-spacing: 5px;
+    text-transform: lowercase;
+}
+.web-title:before {
+    content: "";
+    position: absolute;
+    top: 35px;
+    width: 400px;
+    left: 2px;
+    height: 1px;
+    background: linear-gradient(to right, #b8b8b8a2, #f3f3f3);
 }
 text {
     font-size: 2px;
@@ -62,7 +50,7 @@ text {
     font-weight: 600;
     position: relative;
     text-transform: capitalize;
-    color: #000000;
+    color: #222831;
 }
 .web-title span::after {
     content: "";
@@ -189,7 +177,7 @@ text {
 
 .parent1 p::after {
     /* 303f60 */
-    background: #18233b;
+    background: #303f60;
     box-shadow: 110px -110px #18233b;
 }
 
@@ -208,9 +196,9 @@ text {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     width: 80%;
-    line-height: 20px;
+    line-height: 21px;
     display: flex;
-    color: #1b1b1bb2;
+    color: #393E46;
     /* text-transform: capitalize; */
     justify-content: center;
     text-align: left;
@@ -235,21 +223,22 @@ text {
     align-items: flex-end;
 }
 .rel1 {
-    margin-right: 155px;
+    margin-right: 153px;
 }
 .rel2 {
-    margin-right: 100px;
+    margin-right: 95px;
 }
 .rel3 {
-    margin-right: 52px;
+    margin-right: 45px;
 }
 .Context {
     font-size: 20px;
-    font-family: "Lato", cursive;
+    font-family: "DM Serif Text", sans-serif;
     text-transform: capitalize;
     margin-bottom:7px;
+    letter-spacing: 1px;
     font-weight: 800;
-    color: #202020;
+    color: #363a3f;
 }
 
 @media (max-width:500px) {
