--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel+Decorative:wght@400;700;900&family=Outfit:wght@100;200;300;400;500;600;700;800&family=Overpass:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 /* font-family: 'Cinzel Decorative', cursive;
 font-family: 'Outfit', sans-serif;
 font-family: 'Overpass', sans-serif; */
 body {
-    background-color: #f5f5f5;
+    background-color: #EEEEEE;
 }
 
 .home {
@@ -15,22 +16,31 @@ body {
     justify-content: center;
 }
 .CoverText {
-    margin-left: 80px;
+    margin-left: 110px;
+    margin-top: 40px;
 }
 
 .title {
-    position: relative;
-    font-size: 50px;
-    color: #202020;
+    max-width: 600px;
+    margin: auto;
+    /* position: relative; */
+    font-size: 45px;
     font-family: 'outfit', sans-serif;
-    font-weight: 400;
     text-align: start;
-    white-space: pre-line;
-    line-height: 70px;
+    font-weight: 700;
+    color: #393E46;
+    padding-bottom: 10px;
+}
+special {
+    color: #222831;
 }
 .title-span {
-    color: #303f60;
-    font-weight: 700;
+    max-width: 200px;
+    font-size: 25px;
+    color: #696969;
+    font-family: 'outfit', sans-serif;
+    font-weight: 400;
+    line-height: 35px;
 }
 
 .CoverImage {
@@ -137,14 +147,14 @@ body {
     outline: none;
     font-family:'Outfit', sans-serif;
     text-transform: uppercase;
-    border: 2px solid #3f4a61;
+    border: 2px solid #303f60;
     border-radius: 2px;
-    background: #3f4a61;
+    background: #303f60;
     margin-top: 20px;
     margin-left: 5px;
     letter-spacing: 1px;
   }
   .css-button-rounded--black:hover {
     background: none;
-    color: #3f4a61
+    color: #393E46
   }
