--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,7 +12,7 @@ font-family: 'Overpass', sans-serif; */
 
 /* NAVIGATION */
 .navbar {
-  background: #f4f4f4;
+  background: #EEEEEE;
   position: fixed;
   width: 100%;
   height: 60px;
@@ -57,10 +57,10 @@ font-family: 'Overpass', sans-serif; */
 }
 
 .links:hover {
-  color: #1f1f1f;
+  color: #222831;
 }
 .links.active {
-  color: #1f1f1f;
+  color: #222831;
 }
 
 @media (max-width:500px) {
