--- a/src/Components/Blog card/Blogcard.css
+++ b/src/Components/Blog card/Blogcard.css
@@ -26,73 +26,16 @@
     background: #f5f5f5;
     color: #000000
 }
-
-/* <button class="button-55" role="button">Button 55</button> */
-
-/* CSS */
-.all-btn {
-    transition: all 0.3s ease;
-    position: relative;
-    align-self: center;
-    background-color: #f3f3f3;
-    background-image: none;
-    background-position: 0 90%;
-    background-repeat: repeat no-repeat;
-    background-size: 4px 3px;
-    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
-    border-style: solid;
-    border-width: 2px;
-    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
-    box-sizing: border-box;
-    color: #41403e;
-    cursor: pointer;
-    display: inline-block;
-    font-family: "Lato", sans-serif;
-    font-size: 1rem;
-    line-height: 23px;
-    outline: none;
-    padding: 10px 30px;
-    text-decoration: none;
-    transition: all 235ms ease-in-out;
-    border-bottom-left-radius: 15px 255px;
-    border-bottom-right-radius: 225px 15px;
-    border-top-left-radius: 255px 15px;
-    border-top-right-radius: 15px 225px;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin-top: 40px;
-    overflow: hidden;
+.cardcontainer {
+    width: 220px;
+    height: 200px;
+}
+.containertitle {
+    font-size: 30px;
+    max-width: 200px;
+    line-height: 35px;
+    margin: 10px;
+    /* text-transform: capitalize; */
 }
 
-.all-btn:hover {
-    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
-    transform: translate3d(0, 2px, 0);
-    padding-right: 44px;
-    padding-left:18px;
-}
 
-.all-btn:focus {
-    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-}
-
-/* .css-button-arrow--rose:hover {
-    border-radius: 5px;
-    padding-right: 24px;
-    padding-left:8px;
-  } */
-.all-btn:hover:after {
-    opacity: 1;
-    right: 20px;
-}
-
-.all-btn:after {
-    content: "\00BB";
-    position: absolute;
-    opacity: 0;
-    font-size: 20px;
-    line-height: 40px;
-    top: 0;
-    right: -20px;
-    transition: 0.4s;
-}
