--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,39 +2,46 @@
 
 .about-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 
 .about-image {
-    width: 500px;
-    padding: 90px;
+    width: 400px;
+    padding: 50px;
+    margin-right: 30px;
 }
+
 .name {
     font-size: 35px;
     color: #2e2e2e;
-    font-family: "Noe Display Bold", sans-serif;
-    font-weight: 200;
+    font-family: 'Playfair Display', serif;
+    font-weight: 500;
     line-height: 40px;
 }
+
 .span-name {
     font-size: 40px;
-    font-weight: 400;
-    color: #0a6783;
+    font-weight: 600;
+    color: #475579;
 }
+
 .about-left {
     display: flex;
     flex-direction: column;
+    width: 500px;
+    margin-left: 30px;
 }
+
 .about-content {
     font-size: 20px;
-    font-family: 'Poppins', sans-serif;
-    color: #000000a6;
+    font-family: 'Nunito', sans-serif;
+    color: #13161ba6;
     font-weight: 500;
     margin-top: 20px;
-    max-width: 600px;
-    
+    /* max-width: 500px; */
+    /* white-space: pre-line; */
 }
 
 
@@ -68,40 +75,37 @@
         width: 10px;
     }
 }
-/* .Skill-container {
-    width:100%;
-    height:500px;
-} */
+
 .Skillset {
+    max-width: 800px;
+    margin: auto;
     display: flex;
-    height: auto;
-    justify-content: center;
+    height: 200px;
+    justify-content: space-around;
     align-items: center;
-    margin:50px;
 }
+
 .skill-title {
     position: relative;
-    font-size: 15px;
+    color: #393E46;
+    font-size: 25px;
+    margin: 50px 0 70px 0;
     font-family: "Cinzel Decorative", cursive;
     font-weight: 500;
-    color: #2b2b2b;
-    letter-spacing: 7px;
-    text-transform: capitalize;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 10px;
+    letter-spacing: 5px;
+    text-transform: lowercase;
 }
-.skill-title::after {
+
+.skill-title::before {
     content: "";
     position: absolute;
-    top: 25px;
-    width: 200px;
+    top: 35px;
+    width: 400px;
+    left: 2px;
     height: 1px;
-    border-radius: 10px;
-    background: #3333330e;
+    background: linear-gradient(to right, #b8b8b869, #cecece69, #ffffff);
 }
+
 .skill-section {
     display: flex;
     flex-shrink: 20px;
@@ -110,11 +114,17 @@
     align-items: center;
     height: 350px;
 }
-.CircularProgressbar-text {
-    font-size:20px;
-    color: #000000;
+
+.devprocess {
+    max-width: 800px;
+    margin: auto;
     display: flex;
-    justify-content: center;
-    text-align: center;
+    justify-content: space-around;
     align-items: center;
+
 }
+
+.rule1 img {
+    width: 100%;
+}
+
