--- a/src/Components/ArticlesPage/NFT/Nft.css
+++ b/src/Components/ArticlesPage/NFT/Nft.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap');
+
 .Blog-content-main {
     position: absolute;
     top: 350px;
     left: 5%;
-    max-width: 90%;
+    max-width: 1000px;
     margin: auto;
-    background: #f5f5f5;
+    background: #f9f9f9;
     box-shadow: 1px 10px 100px #00000008;
-    height: auto;
 }
 .Blog-content {
     width: 90%;
@@ -38,15 +39,16 @@
     font-family: "Noe Display Bold", sans-serif;
     max-width: 800px;
     margin: 30px 0;
-    
 }
+
 .blog-p {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lora', serif;
     margin: 15px 0;
-    font-size: 18px;
+    font-size: 20px;
     color: #3d3d3d;
-    
+    letter-spacing: .5px;
 }
+
 .blog-h2 {
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
