--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -4,13 +4,35 @@
 
 .formContainer {
     position: relative;
-    width: 70%;
+    width: 60%;
     margin:auto;
-    padding: 150px 100px;
-    margin-top: 100px;
-    background:#ffffff;
+    padding: 50px;
+    margin-top: 90px;
+    background:#fcfcfc;
     border-radius:20px;
-    box-shadow: 0 25px 50px rgba(0,0,0,.15);
+    box-shadow: 0 1px 10px #0000002f;
+}
+.contact-text {
+    position: relative;
+    display: flex;
+    text-align: end;
+    justify-content: flex-end;
+    align-items: center;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 15px;
+    color: #475579d2;
+    max-width:350px;
+    margin: 0px 0 50px 180px;
+}
+.contact-text::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    width: 300px;
+    right: 2px;
+    height: 1px;
+    background: linear-gradient(to left, #b8b8b839, #cecece39, #ffffff);
 }
 .formContainer p {
     position: absolute;
@@ -30,7 +52,7 @@
     position: absolute;
     width: 150%;
     height: 40px;
-    background: royalblue;
+    background: #475579;
     transform: rotate(-45deg) translateY(-20px);
     display: flex;
     justify-content: center;
@@ -50,9 +72,9 @@
     left: 0;
     width: 10px;
     height: 10px;
-    background: #2a65ca;
+    background: #323c55;
     z-index: -1;
-    box-shadow: 190px -190px #2a65ca ;
+    box-shadow: 190px -190px #323c55 ;
 }
 
 
@@ -76,7 +98,7 @@ textarea {
     font-size: 18px;
     padding: 10px 10px 8px 3px;
     display: block;
-    width: 350px;
+    width: 400px;
     border: none;
     left: 2px;
     border-bottom: 1.5px solid #757575;
@@ -123,7 +145,7 @@ textarea:valid~label {
 .bar {
     position: relative;
     display: block;
-    width: 350px;
+    width: 400px;
 }
 
 .bar:before,
@@ -133,7 +155,7 @@ textarea:valid~label {
     width: 0;
     bottom: 0px;
     position: absolute;
-    background: #5264AE;
+    background: #475579;
     transition: .3s ease all;
     -moz-transition: .3s ease all;
     -webkit-transition: .3s ease all;
@@ -215,7 +237,6 @@ textarea:focus~.bar:after {
     height: 40px;
     color: #fff;
     font-family: 'Outfit', sans-serif;
-    padding: 5px 10px;
     font-size: 17px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -224,12 +245,13 @@ textarea:focus~.bar:after {
     outline: none;
     border-radius: 5px;
     border: none;
-    background: #3a86ff;
-    box-shadow: 0 5px #4433ff;
+    background: #475579;
+    box-shadow: 0 5px #414a5f;
+    margin-top: 20px;
 }
 
 .css-button-3d-sky:hover {
-    box-shadow: 0 3px #4433ff;
+    box-shadow: 0 3px #414a5f;
     top: 1px;
 }
 
