--- a/src/Components/Home/Evolution/Web.css
+++ b/src/Components/Home/Evolution/Web.css
@@ -41,7 +41,7 @@ font-family: 'Overpass', sans-serif;
     width: 400px;
     left: 2px;
     height: 1px;
-    background: linear-gradient(to right, #b8b8b8a2, #f3f3f3);
+    background: linear-gradient(to right, #b8b8b869, #cecece69, #ffffff);
 }
 text {
     font-size: 2px;
@@ -52,17 +52,7 @@ text {
     text-transform: capitalize;
     color: #222831;
 }
-.web-title span::after {
-    content: "";
-    position: absolute;
-    width: 252px;
-    height: 15px;
-    left: 0;
-    top: 12px;
 
-    /* background: linear-gradient(to right, #7783a0, #393e4990); */
-    z-index: -1;
-}
 /* .web-title::before {
     content: "";
     position:absolute;
@@ -76,21 +66,23 @@ text {
 
 .main-parent {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    max-width: 910px;
+    margin: auto;
 }
 
 .parent1,
 .parent2,
 .parent3 {
     position: relative;
-    width: 20%;
+    width: 27%;
     height: 270px;
     background: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0 1px 10px #08070710;
     transition: all .2s ease-in-out;
-    margin: 0 40px;
+    /* margin: 0 40px; */
 }
 
 .parent1:hover,
@@ -101,15 +93,15 @@ text {
 
 
 .parent1 {
-    background: #303f6010;
+    background: #47557910;
 }
 
 .parent2 {
-    background: #303f6010;
+    background: #47557910;
 }
 
 .parent3 {
-    background: #303f6010;
+    background: #47557910;
 }
 
 .parent1 p,
@@ -150,17 +142,17 @@ text {
 
 .parent1 p::before {
     content: "Web 1.0";
-    background: #303f60;
+    background: #475579;
 }
 
 .parent2 pp::before {
     content: "Web 2.0";
-    background: #303f60;
+    background: #475579;
 }
 
 .parent3 ppp::before {
     content: "Web 3.0";
-    background: #303f60;
+    background: #475579;
 }
 
 .parent1 p::after,
@@ -176,8 +168,8 @@ text {
 }
 
 .parent1 p::after {
-    /* 303f60 */
-    background: #303f60;
+    /* 475579 */
+    background: #475579;
     box-shadow: 110px -110px #18233b;
 }
 
@@ -192,8 +184,8 @@ text {
 }
 
 .parent-text {
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
+    font-family: 'Nunito', sans-serif;
     font-weight: 500;
     width: 80%;
     line-height: 21px;
