--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Outfit:wght@100;200;300;400;500;600;700;800&family=Overpass:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300&display=swap');
 /* font-family: 'Cinzel Decorative', cursive;
 font-family: 'Outfit', sans-serif;
 font-family: 'Overpass', sans-serif; */
@@ -12,10 +12,10 @@ font-family: 'Overpass', sans-serif; */
 
 /* NAVIGATION */
 .navbar {
-  background: #EEEEEE;
+  background: #ffffff;
   position: fixed;
   width: 100%;
-  height: 60px;
+  height: 70px;
   top: 0;
   display: flex;
   justify-content: space-around;
@@ -23,7 +23,7 @@ font-family: 'Overpass', sans-serif; */
   transition: top 0.3s;
   /* padding:17px 0 ; */
   z-index: 1000;
-  box-shadow:  0 0 10px 1px #8a8a8a25;
+  border-bottom:1px solid #00000005;
 }
 .hamburger {
   display:none;
@@ -32,7 +32,7 @@ font-family: 'Overpass', sans-serif; */
 .navbar-logo {
   width: 7%;
   height: auto;
-  padding: 10px;
+  padding: 20px;
 }
 
 .navbar-links {
@@ -48,7 +48,7 @@ font-family: 'Overpass', sans-serif; */
   text-decoration: none;
   color: #6e6e6e;
   padding: 10px 10px 3px 10px;
-  font-family: 'Outfit', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -61,6 +61,7 @@ font-family: 'Overpass', sans-serif; */
 }
 .links.active {
   color: #222831;
+  font-weight: 900;
 }
 
 @media (max-width:500px) {
